Перенес id из тела запроса, в path параметры
